--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory(controllib)
 add_subdirectory(conversion)
 add_subdirectory(drivers)
 add_subdirectory(ecl)
+add_subdirectory(flight_test_input)
 add_subdirectory(FlightTasks)
 add_subdirectory(hysteresis)
 add_subdirectory(landing_slope)
